assembly/test/failing/other/const_multiple.asm
@constval aaaa 0x30

@constblock aaaa() {

}
